--- a/workflows/Dockerfile-ghc-9.4
+++ b/workflows/Dockerfile-ghc-9.4
@@ -14,7 +14,7 @@ RUN chmod a+x $HOME/.ghcup/bin/ghcup
 ENV PATH=$PATH:/root/.ghcup/bin/
 ENV PATH=$PATH:/root/.cabal/bin/
 RUN apt-get install --yes curl
-RUN apt-get install --yes gcc make libgmp3-dev
+RUN apt-get install --yes gcc make libgmp3-dev g++
 RUN ghcup install ghc 9.4
 RUN ghcup install cabal 3.4
 RUN ghcup set ghc 9.4.4
